--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		 <li data-ns-test="shoppinglist">grocery</li>
+		 <li data-ns-test="shoppinglist">clothes</li>
+		 <li data-ns-test="shoppinglist">choclates</li>
+		 
+	</ol>
+	
+	<ul>
+		<li data-ns-test="Holiday destinations">london</li>
+		<li data-ns-test="Holiday destinations">paris</li>
+		<li data-ns-test="Holiday destinations">turkey</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
